# raspbotv2_ros

./: .gitignore  HARDWARE.md  HARDWARE.md.bak  README.md  README.md.bak  sync_service.sh
firmware/arduino_nano_rp2040/: README.md  flash.sh
firmware/arduino_nano_rp2040/i2c_scanner/: i2c_scanner.ino
firmware/arduino_nano_rp2040/raspbot_imu_bridge/: raspbot_imu_bridge.ino
firmware/cardputer_bt_teleop/: README.md  cardputer_bt_teleop.ino  flash_and_test_cardputer.sh  flash_cardputer.sh  test_cardputer.sh
firmware/m5stack_cardputer/: README.md  platformio.ini
firmware/m5stack_cardputer/src/: config.h  main.cpp
firmware/pico_rp2040_bno055/: WIRING.md  build_and_flash_pico.sh
firmware/pico_rp2040_bno055/raspbot_bno055_bridge/: raspbot_bno055_bridge.ino
log/: latest_build
raspbot_bringup/: README.md  package.xml  setup.py
raspbot_bringup/launch/: bringup.launch.py
raspbot_bringup/raspbot_bringup/: startup_sound.py
raspbot_bringup/scripts/: raspbot_start.sh
raspbot_bringup/systemd/: raspbot.service
raspbot_hailo_tracking/: CMakeLists.txt  README.md  package.xml
raspbot_hailo_tracking/launch/: hailo_depth.launch.py  hailo_tracking.launch.py
raspbot_hailo_tracking/scripts/: download_hailo_model
raspbot_hailo_tracking/src/: hailo_depth_node.cpp  hailo_detector_node.cpp
raspbot_hw/: package.xml  setup.cfg  setup.py
raspbot_hw/config/: raspbot_hw.yaml
raspbot_hw/launch/: hw.launch.py
raspbot_hw/log/: latest_build
raspbot_hw/raspbot_hw/: battery_monitor_node.py  bno055_serial_node.py  camera_gimbal_node.py  front_calibration_node.py  gpio_backend.py  gpio_sensors_node.py  i2c_car.py  imu_serial_node.py  lidar_obstacle_node.py  lidar_slam_node.py  lightbar_node.py  motor_driver_node.py  motor_id_test_node.py  odometry_node.py  oled_node.py  opencv_camera_node.py  pi_camera_node.py  ultrasonic_node.py
raspbot_hw/raspbot_hw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
raspbot_hw/scripts/: test_motors
raspbot_teleop/: README.md  package.xml  setup.cfg  setup.py
raspbot_teleop/launch/: bt_cardputer_teleop.launch.py  gimbal_teleop.launch.py  keyboard_teleop.launch.py
raspbot_teleop/raspbot_teleop/: bt_cardputer_teleop.py  gimbal_teleop.py  keyboard_teleop.py
raspbot_web_video/: README.md  package.xml  setup.cfg  setup.py  verify_stream.py
raspbot_web_video/launch/: web_video.launch.py
raspbot_web_video/raspbot_web_video/: face_db.py  face_recognition_node.py  mjpeg_streamer.py  web_video_server.py
raspbot_web_video/raspbot_web_video/static/: app.js  body.html  layout_react.js  style.css
