<?xml version="1.0"?>
<package format="3">
  <name>raspbot_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for Yahboom Raspbot V2 (motors, sensors, camera).</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>raspbot_hw</exec_depend>
  <exec_depend>raspbot_web_video</exec_depend>
  <exec_depend>raspbot_hailo_tracking</exec_depend>
  <exec_depend>raspbot_teleop</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
