<?xml version="1.0"?>
<package format="3">
  <name>raspbot_hw</name>
  <version>0.1.0</version>
  <description>Hardware drivers for Yahboom Raspbot V2 (motors over I2C, ultrasonic + IR sensors over GPIO, optional camera).</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-smbus</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
