<?xml version="1.0"?>
<package format="3">
  <name>raspbot_teleop</name>
  <version>0.1.0</version>
  <description>Keyboard teleop for Yahboom Raspbot V2 (publishes geometry_msgs/Twist to cmd_vel).</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
