<?xml version="1.0"?>
<package format="3">
  <name>raspbot_web_video</name>
  <version>0.1.0</version>
  <description>Minimal web (MJPEG) video streamer for Yahboom Raspbot V2 camera topics.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
